--- a/parallel.cabal
+++ b/parallel.cabal
@@ -12,9 +12,10 @@ category:       Control, Parallelism
 build-type:     Simple
 
 tested-with:
-  GHC == 9.10.0
+  GHC == 9.12.0
+  GHC == 9.10.1
   GHC == 9.8.2
-  GHC == 9.6.4
+  GHC == 9.6.6
   GHC == 9.4.8
   GHC == 9.2.8
   GHC == 9.0.2
@@ -24,8 +25,8 @@ tested-with:
   GHC == 8.4.4
   GHC == 8.2.2
   GHC == 8.0.2
-  GHC == 7.10.3
   -- Drop these old GHCs from CI:
+  -- GHC == 7.10.3
   -- GHC == 7.8.4
   -- GHC == 7.6.3
   -- GHC == 7.4.2
@@ -65,7 +66,7 @@ library
 
     build-depends:
         array      >= 0.3 && < 0.6,
-        base       >= 4.3 && < 4.21,
+        base       >= 4.3 && < 4.22,
         containers >= 0.4 && < 0.8,
         deepseq    >= 1.1 && < 1.6
 
